# soma_ros_pkg

./: .gitignore  README.md
SOMAMoveDriver/: CMakeLists.txt  CMakeLists.txt.user.4.8-pre1  CMakeLists.txt.user.b8c2a9b
SOMAMoveDriver/src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
SOMAMoveDriver/src/Behavior/: behavior.cpp  behavior.h  statebase.cpp  statebase.h
SOMAMoveDriver/src/Behavior/QLClient/: qlclient.cpp  qlclient.h
SOMAMoveDriver/src/Behavior/States/: stacking.cpp  stacking.h  starting.cpp  starting.h  stop.cpp  stop.h  stopping.cpp  stopping.h  traveling.cpp  traveling.h
SOMAMoveDriver/src/Common/: configfilepath.h  definitions.h  statevector.h
SOMAMoveDriver/src/Data/: data.cpp  data.h
SOMAMoveDriver/src/Data/Path/: path.cpp  path.h
SOMAMoveDriver/src/Hardware/: hardware.cpp  hardware.h  hardwaredataviewer.cpp  hardwaredataviewer.h  hardwaredataviewer.ui  hardwareinfo.h
SOMAMoveDriver/src/Hardware/Clutch/: clutch.cpp  clutch.h  clutchinfo.h
SOMAMoveDriver/src/Hardware/Motor/: motor.cpp  motor.h  motorinfo.h
SOMAMoveDriver/src/Hardware/Rotary/: rotary.cpp  rotary.h  rotaryinfo.h
SOMAMoveDriver/src/Xbox/: xbox.cpp  xbox.h
minisoma/: CMakeLists.txt  package.xml
minisoma/config/: frontwheels.yaml  rearwheels.yaml  wheels_common.yaml
minisoma/launch/: dynamixel_controller.launch  teleoperate.launch
pcd/: 1602656013.365939_.pcd  ground.pcd  segmented.pcd  slope.pcd
soma_lecture/: CMakeLists.txt  package.xml
soma_lecture/launch/: Sample_IMUandPointCloud.launch  sample_imu.launch  sample_planeseg.launch
soma_lecture/src/: Sample_IMU_Example_publisher.cpp  Sample_PointCloud2_publisher.cpp  Sample_RobotPose_publisher.cpp  imu_subscriber.cpp
soma_motion_planner/: CMakeLists.txt  package.xml
soma_motion_planner/data/: TreeLocations_Mirais.data
soma_motion_planner/scripts/: DubinsPath.py  Environment.py  GraphBasedPathPlanner.py  MotionPlanner.py
soma_mse/: CMakeLists.txt  README.md  package.xml
soma_mse/config/: global_costmap.yaml  local_costmap.yaml  local_planner.yaml
soma_mse/include/: definition.h
soma_mse/include/StateBase/: StateBase.h
soma_mse/include/soma_mse/: definition.h
soma_mse/include/soma_mse/States/: Home.h  MoveTo.h  Stop.h
soma_mse/launch/: bagplay.launch  behavior.launch  harvesting_behavior.launch  hdl_graph_slam.launch  sensors.launch  simulator.launch
soma_mse/rviz/: harvest.rviz  sensors.rviz  simulator.rviz  slam.rviz
soma_mse/script/: analyze_1.py
soma_mse/src/: definition.h
soma_mse/src/StateBase/: StateBase.cpp  StateBase.h
soma_mse/src/States/: Home.cpp  Home.h  MoveTo.cpp  MoveTo.h  Stop.cpp  Stop.h
soma_mse/src/node/: behavior_node.cpp  sample_odom_subscribe_node.cpp  sample_slam_odom.cpp
soma_mse/worlds/: simple3.world
soma_mse/xacro/: movebase_macro.xacro  movebase_vlp16.xacro
soma_perception/: CMakeLists.txt  nodelet_description.xml  package.xml
soma_perception/config/: mlp_costmap.yaml  tomokawa.yaml
soma_perception/launch/: clustering.launch  costmap.launch  diameter_segmentation.launch  floor_detection_sample.launch  mlp_costmap.launch  mlp_prefiltering.launch  noboru_clouds_marge.launch  noboru_make_dataset.launch  plane_segmentation.launch  publish_pcd.launch  sample_segmentation.launch  slope_segmentation.launch  tftransform.launch
soma_perception/scripts/: 5_test.py  5_tree_detection.py  9_test.py  9_tree_detection.py  compare.py  coordinate_sub.py  full_tree_detection.py  icp.py  icp_input.py  icp_test.py  kyoku_9_tree_detection.py  mlp_segmentation.py  neural_network.py  new_trivec_kyoku_9_tree_detection.py  noboru_compare.py  noboru_fix_pose.py  noboru_icp_input.py  noboru_make_treelist.py  small_map.py  structure.py  test.py  tmp.txt  tree_detection.py  trivec_9_test.py  trivec_9_tree_detection.py  trivec_kyoku_3_tree_testdata.py  trivec_kyoku_9_tree_detection.py
soma_perception/src/: clustering.cpp  diameter_estimation_nodelet.cpp  floor_detection_nodelet.cpp  g2o_test.cpp  marge_pcd.cpp  mlp_prefiltering_nodelet.cpp  octree_voxel_grid_nodelet.cpp  plane_segmentation_nodelet.cpp  prefiltering_nodelet.cpp  sample_segmentation_nodelet.cpp  slopedetection.cpp
soma_ros/: CMakeLists.txt  nodelet_description.xml  package.xml
soma_ros/config/: 3d_ekf_FB_dr_imu.yaml  3d_ekf_LR_dr_imu.yaml  ekf_LR_dr_imu.yaml  ekf_LR_imu.yaml  ekf_dr_L.yaml  ekf_dr_LR.yaml  ekf_three.yaml  ekf_two_rgbd.yaml  forestmap.yaml  local_costmap_param.yaml  local_costmap_params.yaml  local_planner_param.yaml  noboru_ekf_template.yaml  rqt_ez_pub_cfg.yaml  tomokawa.yaml  ukf_template.yaml
soma_ros/images/: dirs.html
soma_ros/launch/: 01_sensors.launch  02_hdl_graph_slam.launch  behavior.launch  orbslam2_camera_B.launch  orbslam2_camera_F.launch  orbslam2_camera_L.launch  orbslam2_camera_R.launch  orbslam2_rgbd.launch  plane_segmentation.launch  plane_segmentation.launch.buckup  rgbd_camera_B.launch  rgbd_camera_L.launch  rgbd_camera_R.launch  rgbd_odom_B.launch  rgbd_odom_F.launch  rgbd_odom_L.launch  rgbd_odom_R.launch  rgbd_odometry.launch  rtabmap_rgbd_mapping.launch  tfpub_rgbd_cameras.launch  vision.launch
soma_ros/rviz/: hdlgraphslam_play.rviz  plane_segmentation.rviz  rviz.rviz  tomokawa_plane_seg.rviz
soma_ros/scripts/: FB_poseconvert_node.py  dead_recogning_node.py  harvested_node.py  poseconvert_node.py  pub_cood.py
soma_ros/soma_perception/: nodelet_description.xml
soma_ros/src/: behavior_node_MSE.cpp  points_marge_nodelet.cpp  vision_nodelet.cpp
soma_ros/src/Data/: Data.cpp
soma_sensor/: CMakeLists.txt  package.xml
soma_sensor/launch/: gps.launch  imu.launch  lidar.launch  rgbd_camera.launch  rgbd_camera_B.launch  rgbd_camera_F.launch  rgbd_camera_R.launch
soma_smpls/: CMakeLists.txt  package.xml
soma_smpls/config/: 3dmap_analyze.yaml  local_costmap.yaml
soma_smpls/launch/: 3dmap_analyze.launch  pcd_publish.launch  pointcloudToPCD.launch  prefiltering.launch  region_growing_segmentation.launch  sample_local_costmap.launch  test.launch
soma_smpls/rviz/: 3dmap_analyze.rviz
soma_tools/: CMakeLists.txt  nodelet_description.xml  package.xml
(+78 files in other folders)
