<?xml version="1.0"?>
<package format="2">
	<name>
		soma_mse
	</name>
	<version>
		0.0.0
	</version>
	<description>
		The soma_mse package
	</description>
	<!-- One maintainer tag required, multiple allowed, one person per tag -->
	<!-- Example: -->
	<!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
	<maintainer email="hayashi@todo.todo">
		hayashi
	</maintainer>
	<!-- One license tag required, multiple allowed, one license per tag -->
	<!-- Commonly used license strings: -->
	<!-- BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
	<license>
		TODO
	</license>
	<buildtool_depend>
		catkin
	</buildtool_depend>
	<exec_depend>
		gazebo_ros
	</exec_depend>
	<!-- The export tag contains other, unspecified, tags -->
	<export>
		<!-- Other tools can request additional information be placed here -->
		<gazebo_ros gazebo_media_path="${prefix}/worlds" />
	</export>
</package>
